<resources>
    <string name="app_name">ShareTag</string>
    <string name="search_tags">Search tags</string>
    <string name="select_all">SELECT ALL</string>
    <string name="navigate">GALLERY</string>
    <string name="unselect_all">UNSELECT ALL</string>
    <string name="choose_a_tag">Add a tag</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
    <string name="untagged_only">Untagged only</string>
    <string name="mypage">MYPAGE</string>
    <string name="sign_out_small">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out_confirm_message">Are you sure you want to log out?</string>
    <string name="add_repository">Add repository</string>
    <string name="my_repositories">My repositories</string>
    <string name="find_a_repository">Add a repository</string>
    <string name="add_to_repository">Add to repository</string>
    <string name="premium">PRO</string>
    <string name="basic">BASIC</string>
    <string name="photo_unit">%d photos</string>
    <string name="repo_search_ok">Available repository.</string>
    <string name="repo_search_duplicate">Repository already added.</string>
    <string name="repo_search_empty">No such repository.</string>
    <string name="repo_search_error">Error occurred</string>
    <string name="basic_description">- Tag photos (without backup)\n- Edit Tags(without backup)\n- Share photos</string>
    <string name="premium_description">- Tag photos (with permanent backup)\n- Edit Tags(with permanent backup)\n- Share photos\n- Share the repository</string>
    <string name="upgrade">Upgrade!</string>
    <string name="tag_empty_message">Tag must not be empty</string>
    <string name="tagged_only">SHOW UNTAGGED ONLY</string>
    <string name="all">SHOW ALL</string>
    <string name="find_repo_message">You can copy your repository id in the mypage tab.\nAsk your friends for the id and share photos!</string>
    <string name="sharetag"><b>SHARE</b>TAG</string>
    <string name="ad_sorry">Sorry, unexpected error occurred. Please try again</string>
    <string name="ad_loading_another">Loading another ad. Please try again</string>
    <string name="update">Update</string>
    <string name="exit">Exit</string>
    <string name="do_it_later">Do it later</string>
    <string name="update_notice">Update notice</string>
    <string name="update_message">App has new features to update.\nAre you willing to update now?\n</string>
    <string name="okay">Okay</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="request_permission">Request permission</string>
    <string name="request_permission_message">To use this app, we need your permissions.\n</string>
    <string name="no_tagged_photos">No tagged photos. Tag a photo from your gallery</string>
    <string name="account">account</string>
    <string name="tagged">Tagged :</string>
    <string name="recommended">Recommended :</string>

</resources>
